# NodeWorklet

./: .gitignore  CMakeLists.txt  readme.md
nodejs/: binding.gyp  index.js  package.json
nodejs/src/: worklet_entry.cpp
third-party-ndk/boost/: CMakeLists.txt
third-party-ndk/double-conversion/: yunos.mk
third-party-ndk/fmt/: yunos.mk
third-party-ndk/folly/: CMakeLists.txt  yunos.mk
third-party-ndk/folly/folly/container/: EvictingCacheMap.h
third-party-ndk/folly/folly/portability/: GFlags.h
third-party-ndk/glog/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  yunos.mk
third-party-ndk/libevent/: yunos.mk
third-party-ndk/v8jsi/: CMakeLists.txt  V8Runtime.cpp
worklet/: ui_thread.h
worklet/reanimated/: AgilUIScheduler.cpp  CallInvoker.cpp  CallInvoker.h  ReanimatedModule.cpp  ReanimatedNodejs.cpp
worklet/reanimated/Fabric/: PropsRegistry.cpp  PropsRegistry.h
worklet/reanimated/NativeModules/: NativeReanimatedModule.cpp  NativeReanimatedModule.h
worklet/reanimated/Tools/: UIScheduler.cpp
